gateway.tf
resource "aws_internet_gateway" "gateway" {
  vpc_id = "aws_vpc.basic-env.id"
  tags = {
    Name = "gateway"
  }
}
